--- a/Association Rules.ipynb
+++ b/Association Rules.ipynb
@@ -1535,7 +1535,7 @@
    ],
    "source": [
     "# Load the dataset and show the first columns\n",
-    "data = pd.read_csv('C:/Users/yakup/OneDrive/Masaüstü/DSMLBC/datasets/GroceryStoreDataSet.csv', names = ['products'], header = None)\n",
+    "data = pd.read_csv('GroceryStoreDataSet.csv', names = ['products'], header = None)\n",
     "df = data.copy()\n",
     "df.head()"
    ]
